--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -57,7 +57,7 @@ header {
 .main-nav {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenlysas;
   padding: 1rem 0 0 0;
   @media (min-width: 900px) {
     height: 100%;
@@ -68,6 +68,7 @@ header {
     flex-wrap: nowrap;
     justify-content: space-evenly;
     height: 100%;
+    width: 100%;
     @media (min-width: 900px) {
       flex-direction: column;
       flex-wrap: nowrap;
